--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <body>
     <script
-      src="http://code.jquery.com/jquery-3.4.1.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
